--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </style>
 
 <article>
+<center><img src="jantix-code.png" width="500" /></center>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:#">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
