--- a/index.html
+++ b/index.html
@@ -33,19 +33,15 @@
                 JX Code Studio</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">Indonesian Young Start Up</h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">Share knowledge about creating Android &amp; IOS apps, creating images and logos. Also creates Android and IOS apps with a very affordable price</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="https://mobirise.com">Product Knowledge [Coming Soon]</a></div>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="#top">Product Knowledge [Coming Soon]</a></div>
         </div>
     </div>
 
-    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
-        <a href="#next">
-            <i class="mbri-down mbr-iconfont"></i>
-        </a>
-    </div>
+    
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.me/y">html website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.me/t">amp templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
