--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="https://jxcstudio.github.io">
                          <img src="assets/images/logo2-464x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">free landing page templates</a></section><section class="header9 cid-qRVdI3MtTY mbr-fullscreen mbr-parallax-background" id="header9-0">
+<section class="engine"><a href="https://mobirise.me/l">free website templates</a></section><section class="header9 cid-qRVdI3MtTY mbr-fullscreen mbr-parallax-background" id="header9-0">
 
     
 
